# trapchat

./: .env.example  .gitignore  Cargo.toml  README.md  REVIEW.md  SECURITY.md  docker-compose.yml  go.work  package-lock.json  package.json
.github/workflows/: ci.yml
apps/trapchat/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/trapchat/src/: App.css  App.jsx  index.css
apps/trapchat/src/components/: AudioVisualizer.jsx  ChatView.jsx  JoinView.jsx
apps/trapchat/src/hooks/: useCallManager.js  useKeyRotation.js  useMediaTransfer.js  useRoomManager.js  useTypingIndicator.js  useWebRTCMesh.js
apps/trapchat/src/lib/: crypto.js  media.js  webrtc.js
apps/trapchat/src/socket/: client.js
docs/: Architecture.md  Concept.md  Development.md  MosCoW.md  Overview.md  Roadmap.md
docs/plans/: crypto-hardening.md
docs/specs/: SPEC-001-crypto-hardening.md
pkgs/go/: go.mod  main.go
pkgs/go/crypto/: crypto.go  crypto_test.go
pkgs/go/protocol/: protocol.go
pkgs/go/storage/: storage.go  storage_test.go
pkgs/rust/io/: Cargo.toml
pkgs/rust/io/src/: error.rs  frame.rs  lib.rs  reader.rs
pkgs/rust/protocol/: Cargo.toml
pkgs/rust/protocol/src/: error.rs  lib.rs  message.rs  room.rs
services/gateway/: Dockerfile  go.mod
services/relay/: Cargo.toml  Dockerfile
services/relay/src/: main.rs
services/worker/: .dockerignore  Dockerfile  package-lock.json  package.json
services/worker/src/: index.js  logger.js  manager.js  queue.js  queue.test.js  worker.js  worker.test.js
tests/integration/: pipeline_test.sh
(+6 files in other folders)
